tests/compile_fail/val_float_requires_cpp20.cpp
#include <ptn/patternia.hpp>

int main() {
  auto v = ptn::val<3.14>;
  (void)v;
  return 0;
}
